package com.agence.Trip.Transport;

import java.util.List;

public interface IJourneyRepository {

    List<Journey> getAllJourney();
}
