package com.agence.Trip.Transport;

public enum JourneyType {
    PLANE,
    TRAIN,
    INDIFFERENT
}
