@startuml

package "Transport" {

        enum JourneyType {
        PLANE
        TRAIN
        INDIFFERENT
    }

    enum TransportPriority {
        PRICE
        DURATION
    }

    class Journey {
        - departureCity: String
        - arrivalCity: String
        - journeyType: JourneyType
        - price: double
        - departureLocalDateTime: LocalDateTime
        - arrivalLocalDateTime: LocalDateTime
    }



    class Itinerary {
        - journeys: ArrayList<Journey>
    }

    class ItineraryService {
        + findBestItineraries(criterias): List<Itinerary>
    }

    interface IJourneyRepository {
        + getAllJourney(): List<Journey>
    }

    class JourneyRepository implements IJourneyRepository {
        + JourneyRepository(filePath: String)
        + getAllJourney(): List<Journey>
    }
}

ItineraryService *-- IJourneyRepository : injecté
JourneyRepository o-- Journey
Itinerary o-- Journey
ItineraryService --> Itinerary
ItineraryService --> TransportPriority
ItineraryService --> JourneyType
Journey --> JourneyType

@enduml
